# qt-cmake-boilerplate

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  Widget.cpp  Widget.h  Widget.ui  main.cpp
app/i18n/: app_zh.ts
assets/styles/: dark.qss
distrib/: License.txt  pack.nsi
